tests/neg/syntax_include_cycle_relative_alias.baa
// EXPECT: تم اكتشاف دورة تضمين
// EXPECT: include_cycle/a.baahd
// EXPECT: include_cycle/b.baahd

#تضمين "tests/fixtures/include_cycle/a.baahd"

صحيح الرئيسية() {
    إرجع ٠.
}
